fix dosa update dan delete di shoplocation,owner dan stag
